--- a/3js/style.css
+++ b/3js/style.css
@@ -7,13 +7,27 @@ html , body{
     width: 100%;
     height: 100%;
 }
-#react{
+#center{
  background-color: red;
  position: absolute;
  top: 50%;
- left: 40%;
+ left: 30%;
  transform: translate((-50% , -50%));
- width: 150px;
- height: 230px;
+ width: 40%;
+ height: 40%;
  border: 1px solid rgb(8, 0, 0);
+}
+.imagediv{
+    position: absolute;
+    width: 100px;
+    height: 290px;
+
+    /* background-color: yellow; */
+    overflow: hidden;
+}
+.imagediv img{
+    transform: translateY(100%);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
